# mistral-ocr-mcp

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml  requirements.txt  server.py  test_mcp.py  test_server.py
