[project]
name = "mistral-ocr-mcp"
version = "0.1.0"
description = "MCP server providing Mistral OCR capabilities"
authors = [
    {name = "Abdulrahman Diaa", email = "a2diaa@icloud.com"},
]
dependencies = [
    "mcp[cli]>=0.9.0",
    "mistralai>=1.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
mistral-ocr-mcp = "server:main"